Post-rebase fixes
- One instance of button_color
- A few instances of *-narrow
- dev newsletter was too wide

--- a/media/css/firefox/system-requirements.scss
+++ b/media/css/firefox/system-requirements.scss
@@ -8,35 +8,14 @@ $image-path: '/media/protocol/img';
 @import '../../protocol/css/includes/lib';
 @import '../../protocol/css/components/call-out';
 
-.l-narrow {
-    margin: 0 auto;
-    max-width: 640px;
 
-    @media #{$mq-md} {
-        padding: 0 $spacing-lg;
-    }
-}
-
-/* -------------------------------------------------------------------------- */
+//* -------------------------------------------------------------------------- */
 // Header
-
-.c-page-section {
-    @include font-firefox;
-    margin-bottom: $spacing-lg;
-    min-height: 40px;
-
-    @media #{$mq-sm} {
-        margin-top: $layout-sm;
-        margin-bottom: $layout-sm;
-        @include flexbox;
-        @include align-items(center);
-    }
-
-    @media #{$mq-md} {
-        margin-top: $layout-sm;
-        margin-bottom: $layout-lg;
-        min-height: 48px;
-    }
+.c-page-title {
+    @include text-title-xs;
+    font-weight: bold;
+    margin: $layout-lg 0;
+    position: relative;
 
     &:before {
         @include background-size(40px 40px);
@@ -48,33 +27,17 @@ $image-path: '/media/protocol/img';
         width: 40px;
 
         @media #{$mq-sm} {
-            @include bidi((
-                (float, left, right),
-                (margin-right, $spacing-sm, margin-left, 0),
-            ));
-        }
-
-        @media #{$mq-lg} {
-            @include bidi((
-                (left, $layout-xl, right, auto),
-                (margin-left, 0, 0),
-            ));
             position: absolute;
+            @include bidi((
+                (left, -60px, auto),
+                (right, auto, -60px),
+            ));
+            margin: -10px 0 0;
         }
-    }
-
-    h1 {
-        @include text-title-xs;
-        font-weight: bold;
-    }
-
-    a {
-        color: inherit;
-        text-decoration: none;
     }
 }
 
-.c-page-section:before {
+.c-page-title:before {
     background-image: url('/media/protocol/img/logos/firefox/browser/logo-sm.png');
 
     @media #{$mq-high-res} {
@@ -82,7 +45,7 @@ $image-path: '/media/protocol/img';
     }
 }
 
-.mzp-t-beta .c-page-section:before {
+.mzp-t-beta .c-page-title:before {
     background-image: url('/media/protocol/img/logos/firefox/browser/beta/logo-sm.png');
 
     @media #{$mq-high-res} {
@@ -90,7 +53,7 @@ $image-path: '/media/protocol/img';
     }
 }
 
-.mzp-t-aurora .c-page-section:before {
+.mzp-t-aurora .c-page-title:before {
     background-image: url('/media/img/firefox/releasenotes/aurora.png');
 
     @media #{$mq-high-res} {
@@ -98,7 +61,7 @@ $image-path: '/media/protocol/img';
     }
 }
 
-.mzp-t-nightly .c-page-section:before {
+.mzp-t-nightly .c-page-title:before {
     background-image: url('#{$image-path}/logos/firefox/browser/nightly/logo-lg.png');
 
     @media #{$mq-high-res} {
@@ -164,7 +127,7 @@ $image-path: '/media/protocol/img';
     }
 }
 
-/* -------------------------------------------------------------------------- */
+//* -------------------------------------------------------------------------- */
 // Call-out
 
 .mzp-c-call-out-compact, .all-download {
