--- a/media/css/mozorg/leadership.scss
+++ b/media/css/mozorg/leadership.scss
@@ -16,10 +16,6 @@ $image-path: '/media/protocol/img';
     font-style: normal;
 }
 
-// This will become redundant once we update to Protocol 12
-.mzp-l-content.mzp-t-content-lg {
-    max-width: $content-lg;
-}
 
 // Navigation
 #page-nav {
